--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -14,7 +14,7 @@
                 v-on:click="toggleFilter(filter.name)"
                 v-bind:class=" filter.state ? 'active' : '' "
               >
-                <a>{{ filter.name }}</a>
+                <button>{{ filter.name }}</button>
               </li>
             </ul>
           </section>
