--- a/app/assets/stylesheets/recipes/_recipe_index.scss
+++ b/app/assets/stylesheets/recipes/_recipe_index.scss
@@ -10,10 +10,14 @@
       justify-content: flex-end;
       align-items: center;
 
-      a {
+      button {
+        border: none;
         flex-shrink: 0;
         margin: 0 2rem;
         color: $color-grey-dark;
+        &:focus {
+          outline: none;
+        }
       }
 
       &:before {
@@ -32,15 +36,15 @@
       }
 
       &:hover {
-        a {
-          text-decoration: none;
+        button {
           cursor: pointer;
           color: $color-black;
         }
       }
 
       &.active {
-        a {
+        button {
+          outline: none;
           color: $color-black;
           font-weight: 600;
         }
