--- a/app/assets/stylesheets/recipes/_recipe_index.scss
+++ b/app/assets/stylesheets/recipes/_recipe_index.scss
@@ -11,6 +11,7 @@
       align-items: center;
 
       button {
+        background-color: $color-white;
         border: none;
         flex-shrink: 0;
         margin: 0 2rem;
