--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,6 +1,7 @@
 // Import your components CSS files here.
 @import "alert";
+@import "bottombar";
+@import "links";
 @import "menu";
 @import "spinner";
 @import "topbar";
-@import "bottombar";
