--- a/app/assets/stylesheets/recipes/_recipe_show.scss
+++ b/app/assets/stylesheets/recipes/_recipe_show.scss
@@ -1,7 +1,7 @@
 #recipe-show{
   color: black;
 
-  .header {
+  .recipe__name {
     margin-top: 3rem;
     font-size: 4.8rem;
     text-transform: uppercase;
@@ -14,47 +14,36 @@
     background-color: $color-black;
     margin: 1rem 0 6rem 0;
 
-    &__small {
+    .line__small {
       border-bottom: 1px solid $color-black;
       margin: 1rem 0 3rem 0;
     }
   }
 
-  .servingsandtime {
+  .recipe__info {
     margin-bottom: 2rem;
-    .recipe__info__container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-around;
-      .icon__container {
-        margin-bottom: 2.5rem;
-        flex: 0 0 50%;
-        text-align: center;
-        svg {
-          height: 3rem;
-        }
-        h4 {
-          font-size: 1.8rem;
-          padding: 0.1rem 0.3rem;
-          background-color: $color-black;
-          color: $color-white;
-          width: fit-content;
-          margin-left: auto;
-        }
-      }
+  }
 
+  .recipe__icon-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+
+    .recipe__icon {
+      margin-bottom: 2.5rem;
+      flex: 0 0 50%;
+      text-align: center;
+
+      svg { height: 3rem; }
     }
   }
 
-  .recipe-topnotes {
-    .recipe-description {
-      margin-top: 2rem;
-      margin-bottom: 2rem;
-    }
+  .recipe__description {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
   }
 
-
-  .recipe-image{
+  .recipe__image {
     img{
       width: 100%;
       margin-bottom: 1.5rem;
@@ -62,67 +51,63 @@
     }
   }
 
-  .recipe-info {
+  .recipe__measures {
     position: sticky;
-    top: 5rem;
+    top: 10rem;
+    margin-top: 5rem;
 
-    .recipe-mesures{
-      margin-top: 5rem;
-      ul {
-        li {
-          display: flex;
-          justify-content: flex-start;
-          line-height: 2.6rem;
-          margin-bottom: 1rem;
-          .measure__quantity {
-            font-weight: 600;
-            margin-right: 1rem;
-            width: 4rem;
-            text-align: right;
-            flex-shrink: 0;
-          }
+    ul {
+      li {
+        display: flex;
+        justify-content: flex-start;
+        line-height: 2.6rem;
+        margin-bottom: 1rem;
+
+        .measure__quantity {
+          font-weight: 600;
+          margin-right: 1rem;
+          width: 4rem;
+          text-align: right;
+          flex-shrink: 0;
         }
       }
     }
   }
 
-
-  h3 {
+  .header--middle {
     font-size: 3rem;
     text-transform: uppercase;
     font-weight: 200;
     letter-spacing: .1rem;
   }
 
-  .recipe-etapes {
+  .recipe__steps {
     margin-top: 5rem;
     margin-bottom: 40px;
 
-    .step__container {
+    .step {
       display: flex;
-      h1 {
+
+      h3 {
         text-align: center;
         font-size: 8rem;
         font-weight: 600;
         line-height: 7rem;
       }
-      &--left {
-        justify-content: flex-start;
-        h1 { text-align: left; margin-right: 1rem; flex: 0 0 10%; }
-        p {
-          flex: 0 0 76%;
-        }
-      }
-      &--right {
-        justify-content: flex-end;
-        h1 { text-align: right; margin-left: 1rem; flex: 0 0 10%; }
-        p {
-          flex: 0 0 76%;
-        }
-      }
+
       p {
         text-align: justify;
-        text-justify: inter-word;
+        max-width: 350px;
+      }
+
+      &--left {
+        justify-content: flex-start;
+        h3 { text-align: left; margin-right: 1rem; flex: 0 0 10%; }
+      }
+
+      &--right {
+        justify-content: flex-end;
+        h3 { text-align: right; margin-left: 1rem; flex: 0 0 10%; }
       }
     }
   }
@@ -136,72 +121,55 @@
     }
   }
 
+  // Bootstrap 3
+  @media screen and (max-width: $screen-m) {
+    .recipe__measures { position: inherit; margin-top: 2rem; }
+  }
+
   @media screen and (max-width: $screen-s) {
-    .header {
+    .recipe__name {
       margin: 0;
       font-size: 3.4rem;
       font-weight: 300;
       letter-spacing: 0;
     }
 
-    .line {
-      margin: 0.5rem 0 2rem 0;
-    }
+    .line { margin: 0.5rem 0 2rem 0; }
 
-    .recipe-info {
-      position: inherit;
-    }
+    .recipe__info { margin-bottom: 0; }
 
-    .servingsandtime {
-      margin-bottom: 0;
-      .recipe__info__container {
-        justify-content: space-between;
-        .icon__container {
-          margin-bottom: 0;
-          flex: 0 0 20%;
-          svg {
-            height: 2rem;
-          }
-        }
+    .recipe__icon-container {
+      justify-content: space-between;
+
+      .recipe__icon {
+        margin-bottom: 0;
+        flex: 0 0 20%;
+
+        svg { height: 2rem; }
       }
     }
 
-    h3 {
+    .header--middle {
       font-size: 2.4rem;
       font-weight: 300;
       letter-spacing: 0;
     }
 
-    .recipe-topnotes {
-      .recipe-description {
-        margin: 2rem 0;
-      }
-    }
+    .recipe__description { margin: 2rem 0; }
 
-    .recipe-info {
-      .recipe-mesures{ margin-top: 2rem; }
-    }
+    .recipe__measures { position: inherit; margin-top: 2rem; }
 
-    .recipe-etapes {
+    .recipe__steps {
       margin-top: 2rem;
 
-      .step__container {
-        h1 {
+      .step {
+        h3 {
           text-align: center;
           font-size: 7rem;
           font-weight: 600;
           line-height: 6rem;
         }
-        &--left {
-          p {
-            flex: auto;
-          }
-        }
-        &--right {
-          p {
-            flex: auto;
-          }
-        }
+        p { max-width: none; }
       }
     }
 
