--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -58,8 +58,9 @@
 
         &::placeholder {
           color: $color-grey-light-1;
-          font-size: 2.4rem;
-          font-weight: 600;
+          font-style: oblique;
+          font-size: 2.8rem;
+          font-weight: 400;
           text-transform: none;
         }
 
