--- a/app/views/shared/_bottombar.html.erb
+++ b/app/views/shared/_bottombar.html.erb
@@ -18,7 +18,7 @@
   <% end %>
 
   <div class="bar__title">
-    <a id="home_link" href="/">
+    <a id="bottom_home_link" href="/">
       <h1 class="bar__title--text">oishi.</h1>
     </a>
   </div>
