add aria-label to form inputs

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,6 +24,8 @@
         v-model="query"
         id="landing-search"
         class="search__form__input"
+        autocomplete="off"
+        aria-label="Barre de recherche"
       >
       <button
         type="reset"
