headline have h1 tag

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,8 +4,8 @@
   v-cloak
 >
   <section class="headline">
-    <p class="headline__text">Cuisine japonaise </p>
-    <p class="headline__text headline__text--white">Simple</p>
+    <h1 class="headline__text">Cuisine japonaise </h1>
+    <h1 class="headline__text headline__text--white">Simple</h1>
   </section>
 
   <section class="search">
