justify recipe description text

--- a/app/assets/stylesheets/recipes/_recipe_show.scss
+++ b/app/assets/stylesheets/recipes/_recipe_show.scss
@@ -41,6 +41,10 @@
   .recipe__description {
     margin-top: 2rem;
     margin-bottom: 2rem;
+    p {
+      text-align: justify;
+      hyphens: auto;
+    }
   }
 
   .recipe__image {
