no auto search on mobile

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,8 +14,8 @@
       novalidate="novalidate"
       role="search"
       class="search__form"
-      v-on:submit.prevent="searchRecipes"
     >
+    <!-- v-on:submit.prevent="searchRecipes" -->
       <input
         v-on:input="query = $event.target.value"
         placeholder="Chercher : gyozas, thon, végétarienne..."
